<resources>
    <string name="app_name">HealthApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mainlogo">Mainlogo</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="metric_units">Metric Units</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI</string>
    <string-array name="mass_array">
        <item>kg</item>
        <item>lbs</item>
    </string-array>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">YOUR_APP_ID</string>
    <string name="back4app_client_key">YOUR_CLIENT_KEY</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="logout">logout</string>
</resources>