<?xml version="1.0" encoding="utf-8"?>
<!--Alejandro Pulido
creation on 4/22/21 and last updated on 5/13/21-->
<!--Updated by Brendan Contreras on 5/17/21-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".myhealth.BmiCalculatorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/cardbackground"
        android:padding="5dp"
        android:text="@string/bmi_calculator"
        android:textSize="32sp" />

    <ToggleButton
        android:id="@+id/toggle_units_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2D7E88"
        android:checked="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#EDEDED"
        android:textColorHighlight="#00C31313"
        android:textColorHint="#00FFFFFF"
        android:textColorLink="#00A61A1A"
        android:textOff="@string/imperial_units"
        android:textOn="@string/metric_units" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/cardbackground"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/height_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/height"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/height_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="3"
                android:gravity="center_horizontal"
                android:hint="@string/cm"
                android:inputType="numberDecimal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">


                <EditText
                    android:id="@+id/height_feet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_toStartOf="@+id/mid_view"
                    android:layout_toLeftOf="@+id/mid_view"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:hint="@string/ft"
                    android:inputType="numberDecimal" />

                <View
                    android:id="@+id/mid_view"
                    android:layout_width="10dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:id="@+id/height_inches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/mid_view"
                    android:layout_toRightOf="@id/mid_view"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:hint="@string/in"
                    android:inputType="numberDecimal" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/cardbackground"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/weight"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/weight_kgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="3"
            android:gravity="center_horizontal"
            android:hint="@string/kg"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/weight_lbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="3"
            android:gravity="center_horizontal"
            android:hint="@string/lbs"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2D7E88"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/calculate"
            android:textColor="#EDEDED" />
    </LinearLayout>

    <TextView
        android:id="@+id/results"
        android:layout_width="385dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cardbackground"
        android:gravity="center"
        android:textColor="#008000"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/bmi"
        android:textSize="24sp" />

</LinearLayout>